Ajustei as imagens da página de vassouras, na seção seguros

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 
     <section class="depoimento" aria-label="Depoimento">
         <picture>
+            <source media="(max-width: 800px)" srcset="/assets/img/fotos/depoimento-400.jpg">
             <img src="/assets/img/fotos/depoimento.jpg" width="1560" height="1360" alt="Fleur Delacour sorrindo e olhando para o alto">
         </picture>
 
