--- a/assets/vassouras/red-nimbus.html
+++ b/assets/vassouras/red-nimbus.html
@@ -126,7 +126,7 @@
     <article class="seguro-bg">
         <div class="seguro container">
             <picture class="seguro-imagem">
-                <source media="(max-width: 800px)" srcset="/assets/img/fotos/seguros-400.jpg">
+                <source media="(max-width: 800px)" srcset="/assets/img/fotos/seguros-400.webp">
                 <img src="/assets/img/fotos/seguros.jpg" width="1360" height="1496" alt="Cedrico Diggory, aluno da Grifinória">
             </picture>
 
