Adicionei um menu ativo em js

--- a/assets/seguros.html
+++ b/assets/seguros.html
@@ -192,6 +192,8 @@
             <p class="footer-copy font-2-m cor-6">Vassourax © Alguns Direitos (mágicos) Reservados.</p>
         </div>
     </footer>
+  
+    <script src="/assets/js/script.js"></script>
 </body>
 
 </html>
