Adicionei parâmetros url

--- a/assets/vassouras/thunderbolt.html
+++ b/assets/vassouras/thunderbolt.html
@@ -39,15 +39,15 @@
 
         <div class="vassoura container">
             <div class="vassoura-imagens">
-                <img src="/assets/img/vassouras/firebolt/firebolt2.jpg" width="980" height="880" alt="">
-                <img src="/assets/img/vassouras/firebolt/firebolt1.jpg" width="1120" height="880" alt="">
-                <img src="/assets/img/vassouras/firebolt/firebolt3.jpg" width="1120" height="880" alt="">
+                <img src="/assets/img/vassouras/firebolt/firebolt2.jpg" width="980" height="880" alt="Vassoura 1">
+                <img src="/assets/img/vassouras/firebolt/firebolt1.jpg" width="1120" height="880" alt="Vassoura 2">
+                <img src="/assets/img/vassouras/firebolt/firebolt3.jpg" width="1120" height="880" alt="Vassoura 3">
             </div>
 
             <div class="vassoura-conteudo">
                 <p class="font-2-l cor-5">A Thunderbolt é o nosso modelo mais recente. Ela vem equipada com os melhores acessórios, o que garante maior velocidade e aerodinâmica.</p>
                 <div class="vassoura-comprar">
-                    <a href="/assets/orcamento.html" class="botao">Comprar agora</a>
+                    <a href="/assets/orcamento.html?tipo=vassourax&produto=thunderbolt" class="botao">Comprar agora</a>
                     <span class="font-1-xs cor-6">
                         <img src="/assets/img/icones/entrega.svg" width="14" height="10" alt="">
                         Entrega em 5 dias
