--- a/assets/seguros.html
+++ b/assets/seguros.html
@@ -47,7 +47,7 @@
                     <li>Suporte 8h - 18h</li>
                     <li>Cobertura no mundo dos trouxas</li>
                 </ul>
-                <a class="botao secundario" href="/assets/orcamento.html">Increva-se</a>
+                <a class="botao secundario" href="/assets/orcamento.html?tipo=seguro&produto=prata">Inscreva-se</a>
             </div>
 
             <div class="seguros-item">
@@ -61,7 +61,7 @@
                     <li>Descontos em parceiros</li>
                     <li>Acesso ao Clube Vassourax</li>
                 </ul>
-                <a class="botao" href="/assets/orcamento.html">Increva-se</a>
+                <a class="botao" href="/assets/orcamento.html?tipo=seguro&produto=ouro">Inscreva-se</a>
             </div>
         </div>
     </main>
@@ -115,38 +115,38 @@
 
         <dl>
             <div>
-                <dt class="font-1-m-b">Quais formas de pagamento vocês aceitam?</dt>
-                <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos Pix e Boleto, através do PagSeguro.</dd>
+                <dt><button class="font-1-m-b" aria-controls="pergunta1" aria-expanded="true">Quais formas de pagamento vocês aceitam?</button></dt>
+                <dd id="pergunta1" class="font-2-s cor-9 ativa">Aceitamos cartões de crédito com as bandeiras Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos Pix e Boleto, através do PagSeguro.</dd>
             </div>
 
             <div>
-                <dt class="font-1-m-b">Como posso entrar em contato?</dt>
-                <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos Pix e Boleto, através do PagSeguro.</dd>
+                <dt><button class="font-1-m-b" aria-controls="pergunta2" aria-expanded="false">Como posso entrar em contato?</button></dt>
+                <dd id="pergunta2" class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos Pix e Boleto, através do PagSeguro.</dd>
             </div>
 
             <div>
-                <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
-                <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos Pix e Boleto, através do PagSeguro.</dd>
+                <dt><button class="font-1-m-b" aria-controls="pergunta3" aria-expanded="false">Vocês possuem algum desconto?</dt>
+                <dd id="pergunta3" class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos Pix e Boleto, através do PagSeguro.</dd>
             </div>
 
             <div>
-                <dt class="font-1-m-b">Qual a garantia que possuo?</dt>
-                <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos Pix e Boleto, através do PagSeguro.</dd>
+                <dt><button class="font-1-m-b" aria-controls="pergunta4" aria-expanded="false">Qual a garantia que possuo?</dt>
+                <dd id="pergunta4" class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos Pix e Boleto, através do PagSeguro.</dd>
             </div>
 
             <div>
-                <dt class="font-1-m-b">Posso parcelar no boleto?</dt>
-                <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos Pix e Boleto, através do PagSeguro.</dd>
+                <dt><button class="font-1-m-b" aria-controls="pergunta5" aria-expanded="false">Posso parcelar no boleto?</dt>
+                <dd id="pergunta5" class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos Pix e Boleto, através do PagSeguro.</dd>
             </div>
 
             <div>
-                <dt class="font-1-m-b">Qual Vassourax devo escolher para o meu tamanho?</dt>
-                <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos Pix e Boleto, através do PagSeguro.</dd>
+                <dt><button class="font-1-m-b" aria-controls="pergunta6" aria-expanded="false">Qual Vassourax devo escolher para o meu tamanho?</dt>
+                <dd id="pergunta6" class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos Pix e Boleto, através do PagSeguro.</dd>
             </div>
 
             <div>
-                <dt class="font-1-m-b">Quais formas de pagamento vocês aceitam?</dt>
-                <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos Pix e Boleto, através do PagSeguro.</dd>
+                <dt><button class="font-1-m-b" aria-controls="pergunta7" aria-expanded="false">Quais formas de pagamento vocês aceitam?</dt>
+                <dd id="pergunta7" class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras Visa, Mastercard, Elo e American Express. Para pagamentos à vista também aceitamos Pix e Boleto, através do PagSeguro.</dd>
             </div>
         </dl>
     </article>
@@ -192,7 +192,7 @@
             <p class="footer-copy font-2-m cor-6">Vassourax © Alguns Direitos (mágicos) Reservados.</p>
         </div>
     </footer>
-  
+
     <script src="/assets/js/script.js"></script>
 </body>
 
