Adicionei efeitos de transição em js

--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Oferecemos apenas produtos personalizados pela nossa equipe de bruxos artesãos, feitos ao toque de varinhas específicas e com muito apreço aos detalhes.">
     <title>Vassourax - Vassouras mágicas</title>
-    <link rel="shortcut icon" href="/assets/img/favicon.svg" type="image/x-icon">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
+    <link rel="shortcut icon" href="/assets/img/favicon.svg" type="image/svg+xml">
     <link rel="preload" href="/assets/css/style.css" as="style">
     <link rel="stylesheet" href="/assets/css/style.css">
+
+    <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body>
@@ -33,12 +39,12 @@
     <main class="introducao-bg">
         <div class="introducao container">
             <div class="introducao-conteudo">
-                <h1 class="font-1-xxl cor-0">Vassouras sob medida<span class="cor-p1">.</span></h1>
-                <p class="font-2-l cor-5">Oferecemos produtos personalizados pela nossa equipe de bruxos, feitos ao toque de varinhas específicas e com muito apreço aos detalhes.</p>
-                <a class="botao" href="/assets/vassouras.html">Escolha a sua</a>
+                <h1 class="font-1-xxl cor-0 fadeInDown" data-anime="200">Vassouras sob medida<span class="cor-p1">.</span></h1>
+                <p class="font-2-l cor-5 fadeInDown" data-anime="400">Oferecemos produtos personalizados pela nossa equipe de bruxos, feitos ao toque de varinhas específicas e com muito apreço aos detalhes.</p>
+                <a class="botao fadeInDown" data-anime="600" href="/assets/vassouras.html">Escolha a sua</a>
             </div>
 
-            <picture>
+            <picture data-anime="800" class="fadeInDown">
                 <source media="(max-width: 800px)" srcset="/assets/img/vassouras/firebolt-home.jpg">
                 <img src="/assets/img/fotos/introducao.jpg" width="1280" height="1600" alt="Vassoura mágica preta">
             </picture>
@@ -207,6 +213,7 @@
         </div>
     </footer>
 
+    <script src="/assets/js/plugins/simple-anime.js"></script>
     <script src="/assets/js/script.js"></script>
 </body>
 
