--- a/assets/seguros.html
+++ b/assets/seguros.html
@@ -7,9 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Termos e Condições de Uso do Site.">
     <title>Seguros | Vassourax</title>
-    <link rel="shortcut icon" href="/assets/img/favicon.svg" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
+    <link rel="shortcut icon" href="/assets/img/favicon.svg" type="image/svg+xml">
     <link rel="preload" href="/assets/css/style.css" as="style">
     <link rel="stylesheet" href="/assets/css/style.css">
+    <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body id="seguros">
@@ -37,7 +42,7 @@
             </div>
         </div>
 
-        <div class="seguros container">
+        <div class="seguros container fadeInLeft" data-anime="200">
             <div class="seguros-item">
                 <h3 class="font-1-xl cor-6">PRATA</h3>
                 <span class="font-1-xl cor-0">R$ 199 <span class="font-1-xs cor-6">mensal</span></span>
@@ -50,7 +55,7 @@
                 <a class="botao secundario" href="/assets/orcamento.html?tipo=seguro&produto=prata">Inscreva-se</a>
             </div>
 
-            <div class="seguros-item">
+            <div class="seguros-item fadeInRight" data-anime="400">
                 <h3 class="font-1-xl cor-p1">OURO</h3>
                 <span class="font-1-xl cor-0">R$ 299 <span class="font-1-xs cor-6">mensal</span></span>
                 <ul class="font-2-m cor-0">
@@ -193,6 +198,7 @@
         </div>
     </footer>
 
+    <script src="/assets/js/plugins/simple-anime.js"></script>
     <script src="/assets/js/script.js"></script>
 </body>
 
