--- a/assets/vassouras.html
+++ b/assets/vassouras.html
@@ -7,9 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Termos e Condições de Uso do Site.">
     <title>Vassouras | Vassourax</title>
-    <link rel="shortcut icon" href="/assets/img/favicon.svg" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
+    <link rel="shortcut icon" href="/assets/img/favicon.svg" type="image/svg+xml">
     <link rel="preload" href="/assets/css/style.css" as="style">
     <link rel="stylesheet" href="/assets/css/style.css">
+    <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body id="vassouras">
