Fiz algumas atualizações finais

--- a/assets/contato.html
+++ b/assets/contato.html
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <div class="contato container">
+        <div class="contato container ">
             <section class="contato-dados" aria-label="Endereço">
                 <h2 class="font-1-m cor-0">Loja Online</h2>
                 <div class="contato-endereco font-2-s cor-4">
@@ -151,10 +151,18 @@
                 </nav>
             </div>
 
-            <p class="footer-copy font-2-m cor-6">Vassourax © Alguns Direitos (mágicos) Reservados.</p>
+            <div class="footer-copy font-2-m cor-6">
+                <p>Vassourax © Alguns Direitos (mágicos) Reservados. Site fictício simulando um e-commerce feito por Matheus Queiroz.</p>
+
+                <div class="footer-perfil">
+                    <a href="https://github.com/matheusqueirozds" target="_blank" rel="noopener noreferrer"><img src="/assets/img/icones/github.svg" alt="Ícone do GitHub">Confira o meu perfil no GitHub</a>
+                    <a href="https://www.linkedin.com/in/matheusqueirozds/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/icones/linkedin.svg" alt="Ícone do LinkedIn"> LinkedIn</a>
+                </div>
+            </div>
         </div>
     </footer>
 
+    <script src="/assets/js/plugins/simple-anime.js"></script>
     <script src="/assets/js/script.js"></script>
 </body>
 
