--- a/assets/orcamento.html
+++ b/assets/orcamento.html
@@ -59,9 +59,9 @@
                     <label for="firebolt">Firebolt Black <span>R$ 14999</span></label>
                     <div class="orcamento-detalhes">
                         <ul class="font-1-xs cor-8">
-                            <li><img src="/assets/img/icones/magica.svg" width="24" height="24" alt="">Motor Enfeitiçado</li>
+                            <li><img src="/assets/img/icones/magica.svg" width="24" height="24" alt="">Propulsor Enfeitiçado</li>
                             <li><img src="/assets/img/icones/rastreador.svg" width="24" height="24" alt="">Sigilo Bruxo</li>
-                            <li><img src="/assets/img/icones/velocidade.svg" width="24" height="24" alt="">240 Km/h em 10 segundos</li>
+                            <li><img src="/assets/img/icones/velocidade.svg" width="24" height="24" alt="">240 Km/h</li>
                             <li><img src="/assets/img/icones/cerdas.svg" width="24" height="24" alt="">Resistência de diamante</li>
                         </ul>
                         <img src="/assets/img/vassouras/firebolt-home.jpg" width="1120" height="680" alt="Vassoura Firebolt Black">
@@ -71,10 +71,10 @@
                     <label for="thunderbolt">Thunderbolt Supreme <span>R$ 5499</span></label>
                     <div class="orcamento-detalhes">
                         <ul class="font-1-xs cor-8">
-                            <li><img src="/assets/img/icones/magica.svg" width="24" height="24" alt="">Motor Enfeitiçado</li>
-                            <li><img src="/assets/img/icones/rastreador.svg" width="24" height="24" alt="">Sigilo Bruxo</li>
-                            <li><img src="/assets/img/icones/velocidade.svg" width="24" height="24" alt="">240 Km/h em 10 segundos</li>
-                            <li><img src="/assets/img/icones/cerdas.svg" width="24" height="24" alt="">Resistência de diamante</li>
+                            <li><img src="/assets/img/icones/magica.svg" width="24" height="24" alt="">Propulsor Enfeitiçado</li>
+                            <li><img src="/assets/img/icones/rastreador.svg" width="24" height="24" alt="">Feitiço de Desilusão</li>
+                            <li><img src="/assets/img/icones/velocidade.svg" width="24" height="24" alt="">150 km/h</li>
+                            <li><img src="/assets/img/icones/cerdas.svg" width="24" height="24" alt="">Penas de Hipogrifo</li>
                         </ul>
                         <img src="/assets/img/vassouras/thunderbolt-home.jpg" width="1120" height="680" alt="Vassoura Thunderbolt Supreme">
                     </div>
@@ -83,10 +83,10 @@
                     <label for="red-nimbus">Red Nimbus <span>R$ 3999</span></label>
                     <div class="orcamento-detalhes">
                         <ul class="font-1-xs cor-8">
-                            <li><img src="/assets/img/icones/magica.svg" width="24" height="24" alt="">Motor Enfeitiçado</li>
-                            <li><img src="/assets/img/icones/rastreador.svg" width="24" height="24" alt="">Sigilo Bruxo</li>
-                            <li><img src="/assets/img/icones/velocidade.svg" width="24" height="24" alt="">240 Km/h em 10 segundos</li>
-                            <li><img src="/assets/img/icones/cerdas.svg" width="24" height="24" alt="">Resistência de diamante</li>
+                            <li><img src="/assets/img/icones/magica.svg" width="24" height="24" alt="">Propulsor Enfeitiçado</li>
+                            <li><img src="/assets/img/icones/rastreador.svg" width="24" height="24" alt="">Feitiço antiqueda</li>
+                            <li><img src="/assets/img/icones/velocidade.svg" width="24" height="24" alt="">70 Km/h</li>
+                            <li><img src="/assets/img/icones/cerdas.svg" width="24" height="24" alt="">Cabo de Mogno</li>
                         </ul>
                         <img src="/assets/img/vassouras/red-nimbus-home.jpg" width="1120" height="680" alt="Vassoura Red Nimbus">
                     </div>
@@ -204,7 +204,14 @@
                 </nav>
             </div>
 
-            <p class="footer-copy font-2-m cor-6">Vassourax © Alguns Direitos (mágicos) Reservados.</p>
+            <div class="footer-copy font-2-m cor-6">
+                <p>Vassourax © Alguns Direitos (mágicos) Reservados. Site fictício simulando um e-commerce feito por Matheus Queiroz.</p>
+
+                <div class="footer-perfil">
+                    <a href="https://github.com/matheusqueirozds" target="_blank" rel="noopener noreferrer"><img src="/assets/img/icones/github.svg" alt="Ícone do GitHub">Confira o meu perfil no GitHub</a>
+                    <a href="https://www.linkedin.com/in/matheusqueirozds/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/icones/linkedin.svg" alt="Ícone do LinkedIn"> LinkedIn</a>
+                </div>
+            </div>
         </div>
     </footer>
 
