--- a/assets/vassouras/red-nimbus.html
+++ b/assets/vassouras/red-nimbus.html
@@ -50,7 +50,7 @@
             </div>
 
             <div class="vassoura-conteudo">
-                <p class="font-2-l cor-5">A Red Nimbus é o nosso modelo mais recente. Ela vem equipada com os melhores acessórios, o que garante maior velocidade e aerodinâmica.</p>
+                <p class="font-2-l cor-5">A Red Nimbus é o modelo campeão de vendas. Uma vassoura para toda família, com foco em segurança, conforto e flexibilidade. Acompanha alarme antirroubo.</p>
                 <div class="vassoura-comprar">
                     <a href="/assets/orcamento.html?tipo=vassourax&produto=red-nimbus" class="botao">Comprar agora</a>
                     <span class="font-1-xs cor-6">
@@ -60,7 +60,7 @@
 
                     <span class="font-1-xs cor-6">
                         <img src="/assets/img/icones/estoque.svg" width="14" height="10" alt="">
-                        18 em estoque
+                        257 em estoque
                     </span>
                 </div>
 
@@ -74,31 +74,31 @@
 
                     <li>
                         <img src="/assets/img/icones/velocidade.svg" width="24" height="24" alt="">
-                        <h3 class="font-1-m cor-0">240 Km/h em 10 segundos</h3>
-                        <p class="font-2-xs cor-5">A mais rápida vassoura disponível hoje no mercado.</p>
+                        <h3 class="font-1-m cor-0">70 Km/h</h3>
+                        <p class="font-2-xs cor-5">Voe sem preocupações e com segurança.</p>
                     </li>
 
                     <li>
                         <img src="/assets/img/icones/rastreador.svg" width="24" height="24" alt="">
-                        <h3 class="font-1-m cor-0">Feitiço de Desilusão</h3>
-                        <p class="font-2-xs cor-5">Bruxos podem viajar de vassoura sem ser vistos pelos trouxas.</p>
+                        <h3 class="font-1-m cor-0">Feitiço antiqueda</h3>
+                        <p class="font-2-xs cor-5">Magia colocada para auxiliar em altos impactos, focada em iniciantes.</p>
                     </li>
 
                     <li>
                         <img src="/assets/img/icones/cerdas.svg" width="24" height="24" alt="">
-                        <h3 class="font-1-m cor-0">Resistência de Diamante</h3>
-                        <p class="font-2-xs cor-5">Cabo aerodinâmico, superfino de freixo, acabamento ultrarresistente.</p>
+                        <h3 class="font-1-m cor-0">Cabo de Magno</h3>
+                        <p class="font-2-xs cor-5">Cabo construído visando maior flexibilidade e dinamismo no voo.</p>
                     </li>
                 </ul>
 
-                <h2 class="font1-xs cor-0">Ficha técnica</h2>
+                <h2 class="font1-xs cor-0">Ficha mágica</h2>
                 <ul class="vassoura-ficha font-2-s cor-4">
-                    <li>Peso <span>9kg</span></li>
-                    <li>Altura <span>60 cm</span></li>
-                    <li>Largura <span>120 cm</span></li>
+                    <li>Peso <span>13kg</span></li>
+                    <li>Altura <span>55 cm</span></li>
+                    <li>Largura <span>117 cm</span></li>
                     <li>Profundidade <span>10 cm</span></li>
-                    <li>Velocidade <span>16</span></li>
-                    <li>Cerdas <span>29</span></li>
+                    <li>Velocidade <span>6</span></li>
+                    <li>Cerdas <span>39</span></li>
                 </ul>
             </div>
         </div>
@@ -181,7 +181,14 @@
                 </nav>
             </div>
 
-            <p class="footer-copy font-2-m cor-6">Vassourax © Alguns Direitos (mágicos) Reservados.</p>
+            <div class="footer-copy font-2-m cor-6">
+                <p>Vassourax © Alguns Direitos (mágicos) Reservados. Site fictício simulando um e-commerce feito por Matheus Queiroz.</p>
+
+                <div class="footer-perfil">
+                    <a href="https://github.com/matheusqueirozds" target="_blank" rel="noopener noreferrer"><img src="/assets/img/icones/github.svg" alt="Ícone do GitHub">Confira o meu perfil no GitHub</a>
+                    <a href="https://www.linkedin.com/in/matheusqueirozds/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/icones/linkedin.svg" alt="Ícone do LinkedIn"> LinkedIn</a>
+                </div>
+            </div>
         </div>
     </footer>
 
