--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
             <div class="magia-conteudo">
                 <span class="font-2-l-b cor-5">Magia avançada</span>
                 <h2 class="font-1-xxl cor-0">Você escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
-                <p class="font-2-l cor-5">Cada Vassourax é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia no seu vôo. Você pode também personalizar completamente as suas cores.</p>
+                <p class="font-2-l cor-5">Cada Vassourax é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia no seu vôo.</p>
                 <a class="link" href="/assets/vassouras.html">Escolha um modelo</a>
 
                 <div class="magia-vantagens">
                     <div>
                         <img src="/assets/img/icones/magica.svg" width="24" height="24" alt="">
-                        <h3 class="font-1-m cor-0">Motor Enfeitiçado</h3>
+                        <h3 class="font-1-m cor-0">Propulsor Enfeitiçado</h3>
                         <p class="font-2-s cor-5">Toda Vassourax é equipada com um feitiço propulsor que pode durar até 120h. Além disso, a energia é recarregada de acordo com a velocidade do vôo.</p>
                     </div>
                     <div>
@@ -148,7 +148,7 @@
                 <span class="font-1-xl cor-0">R$ 199 <span class="font-1-xs cor-6">mensal</span></span>
                 <ul class="font-2-m cor-0">
                     <li>Duas trocas por ano</li>
-                    <li>Assistência técnica</li>
+                    <li>Assistência mágica</li>
                     <li>Suporte 8h - 18h</li>
                     <li>Cobertura no mundo dos trouxas</li>
                 </ul>
@@ -209,7 +209,15 @@
                 </nav>
             </div>
 
-            <p class="footer-copy font-2-m cor-6">Vassourax © Alguns Direitos (mágicos) Reservados.</p>
+            <div class="footer-copy font-2-m cor-6">
+                <p>Vassourax © Alguns Direitos (mágicos) Reservados. Site fictício simulando um e-commerce feito por Matheus Queiroz.</p>
+
+                <div class="footer-perfil">
+                    <a href="https://github.com/matheusqueirozds" target="_blank" rel="noopener noreferrer"><img src="/assets/img/icones/github.svg" alt="Ícone do GitHub">Confira o meu perfil no GitHub</a>
+                    <a href="https://www.linkedin.com/in/matheusqueirozds/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/icones/linkedin.svg" alt="Ícone do LinkedIn"> LinkedIn</a>
+                </div>
+            </div>
+
         </div>
     </footer>
 
