--- a/assets/seguros.html
+++ b/assets/seguros.html
@@ -48,7 +48,7 @@
                 <span class="font-1-xl cor-0">R$ 199 <span class="font-1-xs cor-6">mensal</span></span>
                 <ul class="font-2-m cor-0">
                     <li>Duas trocas por ano</li>
-                    <li>Assistência técnica</li>
+                    <li>Assistência mágica</li>
                     <li>Suporte 8h - 18h</li>
                     <li>Cobertura no mundo dos trouxas</li>
                 </ul>
@@ -194,7 +194,14 @@
                 </nav>
             </div>
 
-            <p class="footer-copy font-2-m cor-6">Vassourax © Alguns Direitos (mágicos) Reservados.</p>
+            <div class="footer-copy font-2-m cor-6">
+                <p>Vassourax © Alguns Direitos (mágicos) Reservados. Site fictício simulando um e-commerce feito por Matheus Queiroz.</p>
+
+                <div class="footer-perfil">
+                    <a href="https://github.com/matheusqueirozds" target="_blank" rel="noopener noreferrer"><img src="/assets/img/icones/github.svg" alt="Ícone do GitHub">Confira o meu perfil no GitHub</a>
+                    <a href="https://www.linkedin.com/in/matheusqueirozds/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/icones/linkedin.svg" alt="Ícone do LinkedIn"> LinkedIn</a>
+                </div>
+            </div>
         </div>
     </footer>
 
