--- a/assets/termos.html
+++ b/assets/termos.html
@@ -157,7 +157,14 @@
                 </nav>
             </div>
 
-            <p class="footer-copy font-2-m cor-6">Vassourax © Alguns Direitos (mágicos) Reservados.</p>
+            <div class="footer-copy font-2-m cor-6">
+                <p>Vassourax © Alguns Direitos (mágicos) Reservados. Site fictício simulando um e-commerce feito por Matheus Queiroz.</p>
+
+                <div class="footer-perfil">
+                    <a href="https://github.com/matheusqueirozds" target="_blank" rel="noopener noreferrer"><img src="/assets/img/icones/github.svg" alt="Ícone do GitHub">Confira o meu perfil no GitHub</a>
+                    <a href="https://www.linkedin.com/in/matheusqueirozds/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/icones/linkedin.svg" alt="Ícone do LinkedIn"> LinkedIn</a>
+                </div>
+            </div>
         </div>
     </footer>
 
