--- a/assets/vassouras.html
+++ b/assets/vassouras.html
@@ -43,17 +43,17 @@
         </div>
 
         <div class="vassouras container">
-            <div class="vassouras-imagem">
+            <div class="vassouras-imagem fadeInLeft" data-anime="200">
                 <img src="/assets/img/vassouras/firebolt-home.jpg" width="1120" height="680" alt="Vassoura preta">
                 <span class="font-2-m cor-0">R$ 14999</span>
             </div>
 
             <div class="vassouras-conteudo">
-                <h2 class="font-1-xl">Firebolt Black</h2>
+                <h2 class="font-1-xl fadeInRight" data-anime="400">Firebolt Black</h2>
 
-                <p class="font-2-s cor-8">A Firebolt Black é o nosso modelo mais recente e top de linha. Ela vem equipada com os melhores acessórios, o que garante maior velocidade e aerodinâmica.</p>
+                <p class="font-2-s cor-8 fadeInRight" data-anime="400">A Firebolt Black é o nosso modelo mais recente e top de linha. Ela vem equipada com os melhores acessórios, o que garante maior velocidade e aerodinâmica.</p>
 
-                <ul class="font-1-m cor-8">
+                <ul class="font-1-m cor-8 fadeInRight" data-anime="600">
                     <li>
                         <img src="/assets/img/icones/magica.svg" width="24" height="24" alt="">
                         Garantia de 10 anos
@@ -61,12 +61,12 @@
 
                     <li>
                         <img src="/assets/img/icones/rastreador.svg" width="24" height="24" alt="">
-                        Antirrastreio
+                        Sigilo Bruxo
                     </li>
 
                     <li>
                         <img src="/assets/img/icones/velocidade.svg" width="24" height="24" alt="">
-                        240 Km/h em 10 segundos
+                        240 Km/h
                     </li>
 
                     <li>
@@ -75,7 +75,7 @@
                     </li>
                 </ul>
 
-                <a href="/assets/vassouras/firebolt.html" class="botao seta">Mais sobre</a>
+                <a href="/assets/vassouras/firebolt.html" class="botao seta fadeInRight" data-anime="800">Mais sobre</a>
             </div>
         </div>
 
@@ -98,12 +98,12 @@
 
                         <li>
                             <img src="/assets/img/icones/rastreador.svg" width="24" height="24" alt="">
-                            Acompanha um Feitiço de Desilusão
+                            Feitiço de Desilusão
                         </li>
 
                         <li>
                             <img src="/assets/img/icones/velocidade.svg" width="24" height="24" alt="">
-                            80 Km/h
+                            150 km/h
                         </li>
 
                         <li>
@@ -135,7 +135,7 @@
 
                     <li>
                         <img src="/assets/img/icones/rastreador.svg" width="24" height="24" alt="">
-                        Acompanha um Feitiço de Desilusão
+                        Feitiço de Desilusão
                     </li>
 
                     <li>
@@ -192,10 +192,18 @@
                 </nav>
             </div>
 
-            <p class="footer-copy font-2-m cor-6">Vassourax © Alguns Direitos (mágicos) Reservados.</p>
+            <div class="footer-copy font-2-m cor-6">
+                <p>Vassourax © Alguns Direitos (mágicos) Reservados. Site fictício simulando um e-commerce feito por Matheus Queiroz.</p>
+
+                <div class="footer-perfil">
+                    <a href="https://github.com/matheusqueirozds" target="_blank" rel="noopener noreferrer"><img src="/assets/img/icones/github.svg" alt="Ícone do GitHub">Confira o meu perfil no GitHub</a>
+                    <a href="https://www.linkedin.com/in/matheusqueirozds/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/icones/linkedin.svg" alt="Ícone do LinkedIn"> LinkedIn</a>
+                </div>
+            </div>
         </div>
     </footer>
 
+    <script src="/assets/js/plugins/simple-anime.js"></script>
     <script src="/assets/js/script.js"></script>
 </body>
 
