--- a/assets/vassouras/firebolt.html
+++ b/assets/vassouras/firebolt.html
@@ -74,7 +74,7 @@
 
                     <li>
                         <img src="/assets/img/icones/velocidade.svg" width="24" height="24" alt="">
-                        <h3 class="font-1-m cor-0">240 Km/h em 10 segundos</h3>
+                        <h3 class="font-1-m cor-0">240 Km/h</h3>
                         <p class="font-2-xs cor-5">A mais rápida vassoura disponível hoje no mercado.</p>
                     </li>
 
@@ -91,14 +91,14 @@
                     </li>
                 </ul>
 
-                <h2 class="font1-xs cor-0">Ficha técnica</h2>
+                <h2 class="font1-xs cor-0">Ficha mágica</h2>
                 <ul class="vassoura-ficha font-2-s cor-4">
                     <li>Peso <span>9kg</span></li>
                     <li>Altura <span>60 cm</span></li>
                     <li>Largura <span>120 cm</span></li>
-                    <li>Profundidade <span>10 cm</span></li>
-                    <li>Velocidade <span>16</span></li>
-                    <li>Cerdas <span>29</span></li>
+                    <li>Profundidade <span>9 cm</span></li>
+                    <li>Velocidade <span>10</span></li>
+                    <li>Cerdas <span>40</span></li>
                 </ul>
             </div>
         </div>
@@ -181,7 +181,14 @@
                 </nav>
             </div>
 
-            <p class="footer-copy font-2-m cor-6">Vassourax © Alguns Direitos (mágicos) Reservados.</p>
+            <div class="footer-copy font-2-m cor-6">
+                <p>Vassourax © Alguns Direitos (mágicos) Reservados. Site fictício simulando um e-commerce feito por Matheus Queiroz.</p>
+
+                <div class="footer-perfil">
+                    <a href="https://github.com/matheusqueirozds" target="_blank" rel="noopener noreferrer"><img src="/assets/img/icones/github.svg" alt="Ícone do GitHub">Confira o meu perfil no GitHub</a>
+                    <a href="https://www.linkedin.com/in/matheusqueirozds/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/icones/linkedin.svg" alt="Ícone do LinkedIn"> LinkedIn</a>
+                </div>
+            </div>
         </div>
     </footer>
 
