--- a/assets/vassouras/thunderbolt.html
+++ b/assets/vassouras/thunderbolt.html
@@ -50,7 +50,7 @@
             </div>
 
             <div class="vassoura-conteudo">
-                <p class="font-2-l cor-5">A Thunderbolt é o nosso modelo mais recente. Ela vem equipada com os melhores acessórios, o que garante maior velocidade e aerodinâmica.</p>
+                <p class="font-2-l cor-5">A Thunderbolt é o nosso modelo com o maior custo-benefício. Perfeita para ir trabalhar ou viajar a negócios. Possui grande autonomia de vôo e resistência aos ventos.</p>
                 <div class="vassoura-comprar">
                     <a href="/assets/orcamento.html?tipo=vassourax&produto=thunderbolt" class="botao">Comprar agora</a>
                     <span class="font-1-xs cor-6">
@@ -60,7 +60,7 @@
 
                     <span class="font-1-xs cor-6">
                         <img src="/assets/img/icones/estoque.svg" width="14" height="10" alt="">
-                        18 em estoque
+                        42 em estoque
                     </span>
                 </div>
 
@@ -68,37 +68,37 @@
                 <ul class="vassoura-informacoes">
                     <li>
                         <img src="/assets/img/icones/magica.svg" width="24" height="24" alt="">
-                        <h3 class="font-1-m cor-0">Garantia de 10 anos</h3>
+                        <h3 class="font-1-m cor-0">Garantia de 5 anos</h3>
                         <p class="font-2-xs cor-5">A garantia leva em consideração um feitiço inquebrável de freagem.</p>
                     </li>
 
                     <li>
                         <img src="/assets/img/icones/velocidade.svg" width="24" height="24" alt="">
-                        <h3 class="font-1-m cor-0">240 Km/h em 10 segundos</h3>
-                        <p class="font-2-xs cor-5">A mais rápida vassoura disponível hoje no mercado.</p>
+                        <h3 class="font-1-m cor-0">150 Km/h</h3>
+                        <p class="font-2-xs cor-5">A velocidade na medida certa para quem busca economia!</p>
                     </li>
 
                     <li>
                         <img src="/assets/img/icones/rastreador.svg" width="24" height="24" alt="">
                         <h3 class="font-1-m cor-0">Feitiço de Desilusão</h3>
-                        <p class="font-2-xs cor-5">Bruxos podem viajar de vassoura sem ser vistos pelos trouxas.</p>
+                        <p class="font-2-xs cor-5">Trouxas enxergarão um pássaro ao te verem voando pelos céus.</p>
                     </li>
 
                     <li>
                         <img src="/assets/img/icones/cerdas.svg" width="24" height="24" alt="">
-                        <h3 class="font-1-m cor-0">Resistência de Diamante</h3>
-                        <p class="font-2-xs cor-5">Cabo aerodinâmico, superfino de freixo, acabamento ultrarresistente.</p>
+                        <h3 class="font-1-m cor-0">Penas de Hipogrifo</h3>
+                        <p class="font-2-xs cor-5">Voe de forma confortável e com um acabamento resistente a ventanias.</p>
                     </li>
                 </ul>
 
-                <h2 class="font1-xs cor-0">Ficha técnica</h2>
+                <h2 class="font1-xs cor-0">Ficha mágica</h2>
                 <ul class="vassoura-ficha font-2-s cor-4">
-                    <li>Peso <span>9kg</span></li>
-                    <li>Altura <span>60 cm</span></li>
-                    <li>Largura <span>120 cm</span></li>
-                    <li>Profundidade <span>10 cm</span></li>
-                    <li>Velocidade <span>16</span></li>
-                    <li>Cerdas <span>29</span></li>
+                    <li>Peso <span>11kg</span></li>
+                    <li>Altura <span>55 cm</span></li>
+                    <li>Largura <span>121 cm</span></li>
+                    <li>Profundidade <span>9 cm</span></li>
+                    <li>Velocidade <span>8</span></li>
+                    <li>Cerdas <span>48</span></li>
                 </ul>
             </div>
         </div>
@@ -181,7 +181,14 @@
                 </nav>
             </div>
 
-            <p class="footer-copy font-2-m cor-6">Vassourax © Alguns Direitos (mágicos) Reservados.</p>
+            <div class="footer-copy font-2-m cor-6">
+                <p>Vassourax © Alguns Direitos (mágicos) Reservados. Site fictício simulando um e-commerce feito por Matheus Queiroz.</p>
+
+                <div class="footer-perfil">
+                    <a href="https://github.com/matheusqueirozds" target="_blank" rel="noopener noreferrer"><img src="/assets/img/icones/github.svg" alt="Ícone do GitHub">Confira o meu perfil no GitHub</a>
+                    <a href="https://www.linkedin.com/in/matheusqueirozds/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/icones/linkedin.svg" alt="Ícone do LinkedIn"> LinkedIn</a>
+                </div>
+            </div>
         </div>
     </footer>
 
